<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ OpenKLAS
 ~ Copyright (C) 2020-2021 OpenKLAS Team
 ~
 ~ This program is free software: you can redistribute it and/or modify
 ~ it under the terms of the GNU General Public License as published by
 ~ the Free Software Foundation, either version 3 of the License, or
 ~ (at your option) any later version.
 ~
 ~ This program is distributed in the hope that it will be useful,
 ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
 ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 ~ GNU General Public License for more details.
 ~
 ~ You should have received a copy of the GNU General Public License
 ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<resources>
	<string name="app_name">OpenKLAS</string>

	<string name="common_ok">확인</string>
	<string name="common_unknown_error">알 수 없는 오류가 발생했습니다</string>
	<string name="common_error_dialog_title">오류</string>
	<string name="common_refresh">재시도</string>

	<string name="common_header_button_description">헤더 버튼</string>
	<string name="common_search_button_description">검색 버튼</string>
	<string name="a11y_home_today_schedule_icon">시간표 아이콘</string>
	<string name="a11y_home_homework_icon">숙제의 눈물 아이콘</string>
	<string name="a11y_home_online_video_icon">온라인 콘텐츠 아이콘</string>

	<string name="download_description">파일을 다운로드 중…</string>
	<string name="download_unavailable">다운로드를 할 수 없습니다</string>
	<string name="permission_download_denied">저장 권한이 거부되었습니다</string>

	<plurals name="common_left_time_day">
		<item quantity="one">하루</item>
		<item quantity="two">이틀</item>
		<item quantity="other">%1$d일</item>
	</plurals>
	<string name="common_left_time_soon">곧</string>
	<plurals name="common_left_time_minute">
		<item quantity="one">1분</item>
		<item quantity="other">%1$d분</item>
	</plurals>
	<plurals name="common_left_time_hour">
		<item quantity="one">1시간</item>
		<item quantity="other">%1$d시간</item>
	</plurals>
	<string name="common_time_moment_ago">방금 전</string>
	<plurals name="common_time_minutes_ago">
		<item quantity="other">%1$d분 전</item>
	</plurals>
	<plurals name="common_time_hours_ago">
		<item quantity="other">%1$d시간 전</item>
	</plurals>
	<plurals name="common_time_day_ago">
		<item quantity="one">하루 전</item>
		<item quantity="two">이틀 전</item>
		<item quantity="other">%1$s일 전</item>
	</plurals>
	<string name="common_date_format_short">yyyy/MM/dd</string>

	<string name="common_semester_dialog_title">학기 선택</string>
	<string name="common_subject_dialog_title">과목 선택</string>

	<string name="common_department">학과</string>
	<string name="common_student_id">학번</string>
	<string name="common_name">이름</string>
	<string name="common_major">전공</string>
	<string name="common_elective">교양</string>
	<string name="common_others">기타</string>
	<string name="common_term">학기</string>
	<string name="common_credits">학점</string>
	<string name="common_semester">%1$d년도 %2$d학기</string>
	<string name="common_subject">과목</string>
	<string name="common_academic_number">학정 번호</string>
	<string name="common_certificate_type">인증 구분</string>

	<string name="home">Main</string>
	<string name="timetable">Timetable</string>
	<string name="notification">Notifications</string>
	<string name="setting">Settings</string>

	<string name="login_title">로그인</string>
	<string name="login_username">학번</string>
	<string name="login_password">비밀번호</string>
	<string name="login_submit">로그인</string>
	<string name="login_remember_me">자동 로그인</string>
	<string name="login_error_title">오류</string>
	<string name="login_error_empty_field">학번과 비밀번호를 입력해주세요</string>

	<string name="empty_lecture">남은 강의</string>
	<string name="empty_hw">남은 과제</string>
	<string name="courses">수강 과목</string>
	<string name="course_notice">강의 공지사항</string>
	<string name="course_plan">강의 계획서</string>
	<string name="course_material">강의 자료실</string>
	<string name="course_submit">과제 제출</string>
	<string name="course_qna">강의 묻고답하기</string>
	<string name="course_name">강의명</string>
	<string name="course_time">수업 시간</string>
	<string name="course_loc">수업 장소</string>
	<string name="homework_assignments">과제</string>

	<string name="home_schedule_title">오늘의 시간표</string>
	<string name="home_no_class_today">오늘은 강의가 없어요!</string>
	<string name="home_schedule_show_more">시간표</string>
	<string name="home_homework_title">과제</string>
	<string name="home_online_video_title">온라인 강의</string>
	<string name="home_due_in_24hours">24시간 안에 마감 %d</string>
	<string name="home_no_homework">표시할 과제가 없어요</string>
	<string name="home_no_video">표시할 강의가 없어요</string>
	<string name="home_homework_show_more">남은 과제 %d</string>
	<string name="home_online_video_show_more">남은 강의 %d</string>

	<string name="post_list_title">게시글</string>
	<string name="post_list_all_posts">전체 게시글</string>
	<string name="post_list_none">게시글이 없어요</string>
	<string name="post_list_search_title">게시글 검색</string>
	<string name="post_list_search_keyword">검색어</string>
	<plurals name="post_list_match_count">
		<item quantity="other">총 %d개의 게시글이 있어요</item>
	</plurals>
	<string name="post_list_search_submit">검색</string>
	<string name="post_list_filter_submit">게시글 검색 필터 설정</string>
	<string name="post_list_change_subject">변경</string>
	<string name="post_list_filter_keyword_label">검색어</string>
	<string name="post_list_filter_description">검색어 삭제</string>
	<string name="post_hits">조회수 %d</string>

	<string name="syllabus_search">강의계획서</string>
	<string name="syllabus_search_bottom_sheet_title">강의계획서 검색</string>
	<string name="syllabus_search_keyword_hint">과목</string>
	<string name="syllabus_search_professor_hint">교수</string>
	<string name="syllabus_search_submit">검색</string>
	<string name="syllabus_search_result">강의 계획서 검색 결과</string>
	<string name="syllabus_search_no_data">아직 입력되지 않은 강의계획서입니다.</string>
	<string name="syllabus_search_set_filter">상단의 검색 버튼을 이용해주세요</string>

	<string name="syllabus_search_result_count">해당되는 강의계획서가 %d개 있어요</string>

	<string name="syllabus">강의계획서</string>
	<string name="syllabus_schedule">시간</string>
	<string name="syllabus_student_count">수강생</string>
	<string name="syllabus_summary">개요</string>
	<string name="syllabus_purpose">교육 목적</string>
	<string name="syllabus_book">교재</string>
	<string name="syllabus_book_meta">%1$s (%2$s)</string>
	<string name="syllabus_score_weights">반영 비율</string>
	<string name="syllabus_vl_competence">VL 역량</string>

	<string name="syllabus_score_attendance">출석</string>
	<string name="syllabus_score_midterm">중간고사</string>
	<string name="syllabus_score_final_term">기말고사</string>
	<string name="syllabus_score_report">과제</string>
	<string name="syllabus_score_attitude">태도</string>
	<string name="syllabus_score_quiz">퀴즈</string>
	<string name="syllabus_score_others">기타</string>

	<string name="syllabus_vl_profession">전문성</string>
	<string name="syllabus_vl_convergence_thinking">융합적사고</string>
	<string name="syllabus_vl_global_competence">글로벌역량</string>
	<string name="syllabus_vl_social_competence">사회관계역량</string>
	<string name="syllabus_vl_future_oriented">미래가치지향</string>
	<string name="syllabus_vl_challenger_minded">도전정신</string>
	<string name="syllabus_vl_sympathy">공존/공감의식</string>

	<!-- day, periods, classroom -->
	<string name="lecture_schedule_format">%1$s %2$s교시 (%3$s)</string>
	<string name="classroom_undefined">미지정</string>

	<string name="tutor">강사진</string>
	<string name="professor">교수</string>
	<string name="secondary_professor">조교수</string>
	<string name="teaching_assistant">조교</string>

	<string name="assignment_list_title">과제</string>
	<string name="assignment_list_change_subject">변경</string>
	<string name="assignment_done">제출</string>
	<string name="assignment_undone">미제출</string>

	<string name="assignment_due_not_23_59">마감이 %1$d시 %2$d분이에요. 23시 59분에 제출하지 않도록 주의해주세요!</string>

	<string name="grades">성적 조회</string>
	<string name="grades_credit_status">학점 현황</string>
	<string name="grades_applied">신청</string>
	<string name="grades_deleted">삭제</string>
	<string name="grades_acquired">취득</string>
	<string name="grades_major_gpa">전공 평점</string>
	<string name="grades_overall_gpa">전체 평점</string>
	<string name="grades_major_gpa_short">전공</string>
	<string name="grades_overall_gpa_short">전체</string>
	<string name="grades_grade">성적</string>
	<string name="grades_grade_no_input">N/A</string>
	<string name="grades_grade_not_settled">처리 중</string>
</resources>
