<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ OpenKLAS
 ~ Copyright (C) 2020-2021 OpenKLAS Team
 ~
 ~ This program is free software: you can redistribute it and/or modify
 ~ it under the terms of the GNU General Public License as published by
 ~ the Free Software Foundation, either version 3 of the License, or
 ~ (at your option) any later version.
 ~
 ~ This program is distributed in the hope that it will be useful,
 ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
 ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 ~ GNU General Public License for more details.
 ~
 ~ You should have received a copy of the GNU General Public License
 ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<group android:id="@+id/nav_group_post">

		<item android:id="@+id/nav_notice_list"
			android:title="@string/course_notice" />

		<item android:id="@+id/nav_material_list"
			android:title="@string/course_material" />

		<item android:id="@+id/nav_qna_list"
			android:title="@string/course_qna" />

	</group>

	<group android:id="@+id/nav_group_homework">

		<item android:id="@+id/nav_assignment_list"
			android:title="@string/homework_assignments" />

	</group>

	<group android:id="@+id/nav_group_course">
		<item android:id="@+id/nav_syllabus_search"
			android:title="@string/syllabus_search" />
	</group>

	<group android:id="@+id/nav_group_result">
		<item android:id="@+id/nav_grades"
			android:title="@string/grades" />
	</group>

</menu>
