<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ OpenKLAS
 ~ Copyright (C) 2020 OpenKLAS Team
 ~
 ~ This program is free software: you can redistribute it and/or modify
 ~ it under the terms of the GNU General Public License as published by
 ~ the Free Software Foundation, either version 3 of the License, or
 ~ (at your option) any later version.
 ~
 ~ This program is distributed in the hope that it will be useful,
 ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
 ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 ~ GNU General Public License for more details.
 ~
 ~ You should have received a copy of the GNU General Public License
 ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/fragment_home"
        android:title="@string/home"
        android:icon="@drawable/home_btn"/>
    <item
        android:id="@id/fragment_timetable"
        android:title="@string/timetable"
        android:icon="@drawable/time_table_btn"/>
    <item
        android:id="@id/fragment_notification"
        android:title="@string/notification"
        android:icon="@drawable/notifications_btn"/>
    <item
        android:id="@id/fragment_setting"
        android:title="@string/setting"
        android:icon="@drawable/settins_btn"/>
</menu>
