<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ OpenKLAS
 ~ Copyright (C) 2020-2021 OpenKLAS Team
 ~
 ~ This program is free software: you can redistribute it and/or modify
 ~ it under the terms of the GNU General Public License as published by
 ~ the Free Software Foundation, either version 3 of the License, or
 ~ (at your option) any later version.
 ~
 ~ This program is distributed in the hope that it will be useful,
 ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
 ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 ~ GNU General Public License for more details.
 ~
 ~ You should have received a copy of the GNU General Public License
 ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingVertical="12dp">

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guide_sheet_start"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintGuide_begin="12dp" />

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guide_sheet_end"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintGuide_end="12dp" />

		<TextView
			android:id="@+id/tv_search_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="@id/guide_sheet_start"
			app:layout_constraintEnd_toEndOf="@id/guide_sheet_end"
			app:layout_constraintHorizontal_bias="0"
			android:text="@string/post_list_search_title"
			android:textSize="21sp"
			android:textStyle="bold" />

		<androidx.constraintlayout.helper.widget.Flow
			android:id="@+id/flow_body"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintTop_toBottomOf="@id/tv_search_title"
			app:layout_constraintStart_toStartOf="@id/guide_sheet_start"
			app:layout_constraintEnd_toEndOf="@id/guide_sheet_end"
			android:layout_marginTop="12dp"
			app:flow_verticalStyle="packed"
			app:flow_verticalGap="8dp"
			app:constraint_referenced_ids="et_keyword,btn_search_submit" />

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/et_keyword"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintStart_toStartOf="@id/guide_sheet_start"
			app:layout_constraintEnd_toEndOf="@id/guide_sheet_end"
			app:startIconDrawable="@drawable/ic_search"
			android:hint="@string/post_list_search_keyword"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

			<com.google.android.material.textfield.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="match_parent" />

		</com.google.android.material.textfield.TextInputLayout>

		<Button
			android:id="@+id/btn_search_submit"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintStart_toStartOf="@id/guide_sheet_start"
			app:layout_constraintEnd_toEndOf="@id/guide_sheet_end"
			app:layout_constraintTop_toBottomOf="@id/et_keyword"
			android:text="@string/post_list_search_submit"
			android:minHeight="60dp" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
