<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ OpenKLAS
 ~ Copyright (C) 2020-2021 OpenKLAS Team
 ~
 ~ This program is free software: you can redistribute it and/or modify
 ~ it under the terms of the GNU General Public License as published by
 ~ the Free Software Foundation, either version 3 of the License, or
 ~ (at your option) any later version.
 ~
 ~ This program is distributed in the hope that it will be useful,
 ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
 ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 ~ GNU General Public License for more details.
 ~
 ~ You should have received a copy of the GNU General Public License
 ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingVertical="12dp">

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guideline_start"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintGuide_begin="18dp" />

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guideline_end"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintGuide_end="18dp" />

		<TextView
			android:id="@+id/tv_search_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toEndOf="@id/guideline_start"
			android:layout_marginTop="8dp"
			android:text="@string/syllabus_search_bottom_sheet_title"
			android:textStyle="bold"
			android:textSize="21sp" />

		<androidx.constraintlayout.helper.widget.Flow
			android:id="@+id/flow_semester"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:constraint_referenced_ids="spinner_year,spinner_term"
			app:flow_horizontalGap="8dp"
			android:orientation="horizontal"
			app:layout_constraintTop_toBottomOf="@id/tv_search_title"
			app:layout_constraintStart_toEndOf="@id/guideline_start"
			app:layout_constraintEnd_toStartOf="@id/guideline_end"
			android:layout_marginTop="18dp" />

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/spinner_year"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintHorizontal_weight="1"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">

			<com.google.android.material.textfield.MaterialAutoCompleteTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="none" />

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/spinner_term"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintHorizontal_weight="1"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">

			<com.google.android.material.textfield.MaterialAutoCompleteTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="none" />

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/et_keyword"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@id/flow_semester"
			app:layout_constraintStart_toStartOf="@id/guideline_start"
			app:layout_constraintEnd_toEndOf="@id/guideline_end"
			android:hint="@string/syllabus_search_keyword_hint"
			android:layout_marginTop="8dp"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

			<com.google.android.material.textfield.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="text"
				android:maxLines="1" />

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/et_professor"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@id/et_keyword"
			app:layout_constraintStart_toEndOf="@id/guideline_start"
			app:layout_constraintEnd_toStartOf="@id/guideline_end"
			android:hint="@string/syllabus_search_professor_hint"
			android:layout_marginTop="8dp"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

			<com.google.android.material.textfield.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="text"
				android:maxLines="1" />

		</com.google.android.material.textfield.TextInputLayout>

		<Button
			android:id="@+id/btn_submit"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@id/et_professor"
			app:layout_constraintStart_toEndOf="@id/guideline_start"
			app:layout_constraintEnd_toStartOf="@id/guideline_end"
			android:layout_marginTop="8dp"
			android:minHeight="60dp"
			android:text="@string/syllabus_search_submit" />

	</androidx.constraintlayout.widget.ConstraintLayout>

</layout>
