<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ OpenKLAS
 ~ Copyright (C) 2020-2021 OpenKLAS Team
 ~
 ~ This program is free software: you can redistribute it and/or modify
 ~ it under the terms of the GNU General Public License as published by
 ~ the Free Software Foundation, either version 3 of the License, or
 ~ (at your option) any later version.
 ~
 ~ This program is distributed in the hope that it will be useful,
 ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
 ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 ~ GNU General Public License for more details.
 ~
 ~ You should have received a copy of the GNU General Public License
 ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<data>
		<import type="android.view.View" />

		<variable
			name="v"
			type="org.openklas.ui.home.HomeFragment" />

		<variable
			name="viewModel"
			type="org.openklas.ui.home.HomeViewModel" />
	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="14dp"
		android:background="@color/white">

		<ImageView
			android:id="@+id/img_icon"
			android:layout_width="18dp"
			android:layout_height="18dp"
			app:layout_constraintTop_toTopOf="@id/label_schedule"
			app:layout_constraintBottom_toBottomOf="@id/label_schedule"
			app:layout_constraintLeft_toLeftOf="parent"
			app:srcCompat="@drawable/ic_schedule"
			android:contentDescription="@string/common_home_today_schedule_icon" />

		<TextView
			android:id="@+id/label_schedule"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintLeft_toRightOf="@id/img_icon"
			android:layout_marginStart="8dp"
			android:textSize="18sp"
			android:textStyle="bold"
			android:textColor="@color/green"
			android:text="@string/home_schedule_title" />

		<TextView
			android:id="@+id/tv_show_more"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toTopOf="@id/label_schedule"
			app:layout_constraintBottom_toBottomOf="@id/label_schedule"
			app:layout_constraintRight_toRightOf="parent"
			android:layout_marginEnd="4dp"
			android:padding="4dp"
			android:text="@string/home_schedule_show_more"
			android:textSize="14sp"
			android:textColor="@color/blue"
			android:onClick="@{v::onClickShowMore}"
			app:drawableEndCompat="@drawable/ic_arrow"
			app:drawableTint="@color/blue"
			android:background="@drawable/background_hover_light_blue"
			android:clickable="true"
			android:focusable="true"
			android:drawablePadding="4dp" />

		<androidx.constraintlayout.widget.Barrier
			android:id="@+id/barrier"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			app:barrierMargin="4dp"
			app:barrierDirection="bottom"
			app:constraint_referenced_ids="label_schedule,img_icon" />

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/rv_schedule"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@id/barrier"
			app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
			app:items="@{viewModel.todaySchedule}"
			android:layout_marginTop="8dp" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="80dp"
			android:gravity="center"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@id/barrier"
			android:layout_marginTop="8dp"
			android:text="@string/home_no_class_today"
			android:visibility="@{viewModel.todayScheduleEmpty ? View.VISIBLE : View.GONE}"
			android:textColor="@color/gray" />

	</androidx.constraintlayout.widget.ConstraintLayout>

</layout>
