<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ OpenKLAS
 ~ Copyright (C) 2020-2021 OpenKLAS Team
 ~
 ~ This program is free software: you can redistribute it and/or modify
 ~ it under the terms of the GNU General Public License as published by
 ~ the Free Software Foundation, either version 3 of the License, or
 ~ (at your option) any later version.
 ~
 ~ This program is distributed in the hope that it will be useful,
 ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
 ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 ~ GNU General Public License for more details.
 ~
 ~ You should have received a copy of the GNU General Public License
 ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<layout xmlns:tools="http://schemas.android.com/tools"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<data>
		<import type="android.view.View" />

		<variable
			name="viewModel"
			type="me.onebone.openklas.ui.syllabus.SyllabusViewModel" />

		<variable
			name="entry"
			type="me.onebone.openklas.klas.model.Syllabus" />
	</data>

	<androidx.coordinatorlayout.widget.CoordinatorLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<androidx.core.widget.NestedScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			app:layout_behavior=".ui.syllabus.page.ScrollShadowBehavior">

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingTop="12dp">

				<TextView
					android:id="@+id/label_schedule"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					android:layout_marginStart="24dp"
					app:drawableTint="@color/primary"
					app:drawableStartCompat="@drawable/ic_sharp_schedule_24"
					android:drawablePadding="4dp"
					android:gravity="center"
					android:textColor="@color/primary"
					android:text="@string/syllabus_schedule" />

				<TextView
					android:id="@+id/label_student_count"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:layout_constraintStart_toStartOf="@id/label_schedule"
					app:layout_constraintTop_toBottomOf="@id/label_schedule"
					android:layout_marginTop="8dp"
					app:drawableStartCompat="@drawable/ic_sharp_person_24"
					app:drawableTint="@color/primary"
					android:drawablePadding="4dp"
					android:gravity="center"
					android:textColor="@color/primary"
					android:text="@string/syllabus_student_count" />

				<androidx.constraintlayout.widget.Barrier
					android:id="@+id/barrier_meta"
					android:layout_width="0dp"
					android:layout_height="0dp"
					app:barrierDirection="end"
					app:constraint_referenced_ids="label_schedule,label_student_count" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:layout_constraintStart_toEndOf="@id/barrier_meta"
					app:layout_constraintTop_toTopOf="@id/label_schedule"
					app:layout_constraintBottom_toBottomOf="@id/label_schedule"
					android:layout_marginStart="8dp"
					app:scheduleText="@{viewModel.schedules}"
					tools:text="월 2,3,4,5교시 (미지정)" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:layout_constraintStart_toEndOf="@id/barrier_meta"
					app:layout_constraintTop_toTopOf="@id/label_student_count"
					app:layout_constraintBottom_toBottomOf="@id/label_student_count"
					android:layout_marginStart="8dp"
					android:textSize="15sp"
					android:text="@{viewModel.studentsNumber == null ? `` : Integer.toString(viewModel.studentsNumber)}"
					tools:text="5" />

				<TextView
					android:id="@+id/label_tutor"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/label_student_count"
					android:layout_marginStart="12dp"
					android:layout_marginTop="16dp"
					android:textColor="@color/primary"
					android:textSize="21sp"
					android:textStyle="bold"
					android:text="@string/tutor" />

				<androidx.recyclerview.widget.RecyclerView
					android:id="@+id/rv_tutors"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@id/label_tutor"
					android:layout_marginTop="8dp"
					app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
					app:items="@{viewModel.tutors}" />

				<View
					android:id="@+id/v_tutor_divider"
					android:layout_width="0dp"
					android:layout_height="4dp"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toBottomOf="@id/rv_tutors"
					android:layout_marginTop="16dp"
					android:background="@color/default_divider" />

				<TextView
					android:id="@+id/label_summary"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@id/v_tutor_divider"
					android:layout_marginTop="16dp"
					android:layout_marginStart="12dp"
					android:textColor="@color/primary"
					android:textSize="21sp"
					android:textStyle="bold"
					android:text="@string/syllabus_summary" />

				<TextView
					android:id="@+id/tv_summary"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:layout_constraintTop_toBottomOf="@id/label_summary"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					android:layout_marginTop="8dp"
					android:paddingStart="12dp"
					android:paddingEnd="12dp"
					android:text="@{entry.summary}" />

				<View
					android:id="@+id/v_summary_divider"
					android:layout_width="0dp"
					android:layout_height="4dp"
					app:layout_constraintTop_toBottomOf="@id/tv_summary"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					android:layout_marginTop="16dp"
					android:background="@color/default_divider" />

				<TextView
					android:id="@+id/label_purpose"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@id/v_summary_divider"
					android:layout_marginTop="16dp"
					android:layout_marginStart="12dp"
					android:textColor="@color/primary"
					android:textSize="21sp"
					android:textStyle="bold"
					android:text="@string/syllabus_purpose" />

				<TextView
					android:id="@+id/tv_purpose"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toBottomOf="@id/label_purpose"
					android:layout_marginTop="8dp"
					android:paddingStart="12dp"
					android:paddingEnd="12dp"
					android:text="@{entry.purpose}" />

				<View
					android:id="@+id/v_purpose_divider"
					android:layout_width="0dp"
					android:layout_height="4dp"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toBottomOf="@id/tv_purpose"
					android:layout_marginTop="16dp"
					android:background="@color/default_divider" />

				<TextView
					android:id="@+id/label_book"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:layout_constraintTop_toBottomOf="@id/v_purpose_divider"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_marginStart="12dp"
					android:layout_marginTop="16dp"
					android:textColor="@color/primary"
					android:textSize="21sp"
					android:textStyle="bold"
					android:text="@string/syllabus_book" />

				<TextView
					android:id="@+id/tv_book_comment"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toBottomOf="@id/label_book"
					android:layout_marginTop="8dp"
					android:paddingStart="12dp"
					android:paddingEnd="12dp"
					android:visibility="@{entry.bookComment == null ? View.GONE : View.VISIBLE}"
					android:text="@{entry.bookComment}" />

				<androidx.recyclerview.widget.RecyclerView
					android:id="@+id/rv_books"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toBottomOf="@id/tv_book_comment"
					android:layout_marginTop="8dp"
					android:layout_marginStart="8dp"
					app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
					app:items="@{entry.books}" />

			</androidx.constraintlayout.widget.ConstraintLayout>

		</androidx.core.widget.NestedScrollView>

		<include layout="@layout/merge_shadow" />

	</androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
